--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ html, body {
   min-height: 100%;
   max-width: 100%;
   overflow-x: hidden;
+  height: 100%;
 }
 
 /* .yog-container{
@@ -46,7 +47,7 @@ html, body {
 } */
 
 .info-container{
-  height: 100%;
+  height: 75%;
   display : flex;
   align-items : center;
 }
@@ -64,14 +65,14 @@ html, body {
 
 .center{
   height: 100vh;
-  background-image: url('images/yoga-class.jpg');
+  background-image: url('images/Emily-yoga-12.jpg');
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .center-box{
   margin: auto;
-  width: 53%;
+  width: 40%;
 }
 
 .info-box{
@@ -98,4 +99,126 @@ html, body {
   top: 0;
   left: 0;
   right: 0;
+}
+
+.footer{
+  background-image: url('images/edge2.png');
+  background-repeat: repeat-x;
+  background-size: contain;
+  z-index: 99;
+  mix-blend-mode: multiply;
+  width: 100%;
+  height: 150px;
+  position: absolute;
+  bottom: 0;
+}
+
+/* MODAL */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 100;
+    left: 0;
+    top: -50px;
+    width: 100%;
+    height: 150%;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+    max-height: 500px;
+    overflow: scroll;
+}
+
+/* The Close Button */
+.close1, .close2, .close3, .close4 {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.about-list{
+  margin-left: 20px;
+}
+
+#accredited{
+  width: 50px;
+  height: 50px;
+}
+
+.inline-block{
+  width: 50%;
+  display: inline-block;
+}
+
+.inline-b{
+  display: inline-block;
+}
+
+.contact-modal {
+  width: 60% !important;
+}
+
+.contact-container{
+  max-height: 200px;
+}
+
+.contact-text{
+  float: left;
+}
+
+.contact-logo-container{
+  float: right;
+  margin-right: 10%;
+  position: relative;
+  bottom: 75px;
+}
+
+.contact-logo{
+  height: 200px;
+  width: 200px;
+  display: inline-block;
+}
+
+.clearfix{
+  clear: both;
+}
+
+.card-body{
+  padding: 20px;
+}
+
+.no-bullet-point{
+  text-decoration: none;
+  margin-bottom: 10px
+}
+
+.day-of-week{
+  margin: 0px;
+  font-weight: 700;
+}
+
+.timings-list{
+  margin-left: 40px;
+}
+
+#map-tooting, #map-battersea, #map-matchstick{
+  float: right;
+  height: 300px;
+  width: 70%;
 }
