--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,8 @@ html, body {
     overflow: scroll;
 }
 
+
+
 .swirls{
   background-image: url('images/swirls.jpg');
   background-repeat: repeat;
@@ -179,6 +181,7 @@ html, body {
 }
 
 .contact-modal {
+  height: 350px;
   width: 60% !important;
 }
 
@@ -403,4 +406,15 @@ html, body {
 
 .bold{
   font-weight: 900;
+}
+
+.social-icons{
+  color: inherit;
+  text-decoration: none;
+  margin-right: 15px;
+  margin-bottom: 10px;
+}
+
+.fab{
+  font-size: 25px;
 }
