--- a/css/style.css
+++ b/css/style.css
@@ -402,7 +402,7 @@ html, body {
   }
 }
 @media screen and (max-width: 640px){
-  #map-tooting, #map-battersea, #map-matchstick{
+  #map-tooting, #map-battersea, #map-revive{
     width: 100%!important;
     float: none;
   }
