--- a/css/style.css
+++ b/css/style.css
@@ -250,7 +250,7 @@ html, body {
   margin-bottom: 30px;
 }
 
-#map-tooting, #map-battersea, #map-matchstick{
+#map-tooting, #map-battersea, #map-revive{
   height: 300px;
   width: 100%;
 }
