--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ html, body {
 } */
 
 .info-container{
-  height: 75%;
+  height: 50%;
   display : flex;
   align-items : center;
 }
@@ -67,21 +67,32 @@ html, body {
 
 .center{
   height: 100vh;
-  background-image: url('images/Emily-yoga-12.jpg');
+  background-image: url('images/landing.jpeg');
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
 }
 
 .center-box{
   margin: 0 auto 50px;
-  width: 40%;
+  width: 100%;
+  text-align: center;
 }
 
 .info-box{
   display: inline-block;
   width: 150px;
   height: 50px;
-  margin-right: 35px;
+}
+
+#about{
+  float: left;
+  margin-left: 12%;
+}
+
+#classOne{
+  float: right;
+  margin-right: 12%;
 }
 
 .image-container{
@@ -96,7 +107,7 @@ html, body {
   z-index: 99;
   mix-blend-mode: multiply;
   width: 100%;
-  height: 150px;
+  height: 120px;
   position: absolute;
   top: 0;
   left: 0;
@@ -137,14 +148,6 @@ html, body {
     width: 80%; /* Could be more or less, depending on screen size */
     max-height: 500px;
     overflow: scroll;
-}
-
-
-
-.swirls{
-  background-image: url('images/swirls.jpg');
-  background-repeat: repeat;
-  background-size: contain;
 }
 
 /* The Close Button */
